mType/tests/testFiles/typeChecking/pass/declarationTypeChecking.mt
class Vehicle {
    string type;
    constructor(string t) {
        type = t;
    }
}

Vehicle car = new Vehicle("Car");  // Valid declaration
print("Declaration successful");